* Add initialise Data script

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,5 @@ warnerrors = True
 [entry_points]
 paste.app_factory =
     main = zk:main
+console_scripts =
+    initialise_data = zk.scripts.initialise_data:main
