Set up tox and travis for new tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pep8
+envlist = py27
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -10,8 +10,9 @@ usedevelop = True
 install_command = pip install --allow-external PIL --allow-unverified PIL --allow-external elementtree --allow-unverified elementtree {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands =
-  python setup.py testr --slowest --testr-args='{posargs}'
+
+[testenv:py27]
+commands = python -m pytest
 
 [testenv:pep8]
 commands = flake8 {posargs}
