--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ addons:
   postgresql: 9.3
 before_script:
   - psql -c 'create database zktest;' -U postgres
+  - cp zkpylons/config/lca_info.py.sample zkpylons/config/lca_info.py
