Fix readme and config link

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = zookeepr
 summary = Conference management system
 description-file =
-    README
+    README.md
 author = Zookeepr developer team and linux.conf.au
 author-email = zookeepr-devel@zookeepr.org
 home-page = http://zookeepr.org/
