--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,4 @@ paste.app_factory =
     main = zk:main
 
 [pytest]
-norecursedirs = .git env TestExample wsgi zk-2.0 zk.egg-info *.egg data alembic docs pbr* zkpylons .tox
+norecursedirs = .git env TestExample wsgi zk-2.0 zk.egg-info *.egg data alembic docs pbr* .tox
