Fix test execution with config table
Mostly involved create config table entries where required.

--- a/test.ini
+++ b/test.ini
@@ -6,6 +6,7 @@ port = 5000
 [app:main]
 use = egg:zookeepr
 sqlalchemy.url = postgresql://postgres@localhost/zktest
+cache_enabled = False
 cache_dir = %(here)s/data
 
 authkit.setup.method = forward, cookie
