Updated install process and instructions
Updated the install documentation.
Mostly just an edit pass.
Added a few sections and a step for development.ini

Also updated both tox.ini and setup.py to work with obselete
packages.

venusian was added to requirements, seems to be used by alembic.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ setenv = VIRTUAL_ENV={envdir}
          LANGUAGE=en_US:en
          LC_ALL=C
 usedevelop = True
-install_command = pip install --allow-external PIL --allow-unverified PIL --allow-external elementtree --allow-unverified elementtree {opts} {packages}
+install_command = pip install --allow-external PIL --allow-unverified PIL --allow-external elementtree --allow-unverified elementtree --find-links=http://effbot.org/downloads {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 
