Fix travis/tox issues on remote server
New versions of pip require the --trusted-host parameter
otherwise they die hard.
Old versions of pip die hard if --trusted-host is present.

Standard virtualenv such as Debian's uses an old version of pip
travis-ci.org which we use for acceptance testing uses a new version

The only solution I have managed to come up with is to have two files.
One providing a config for each system.
  tox.ini is the default and set for the old pip versions
  tox.pip18.ini is for new pip versions and is used by .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
 # command to install dependencies
 install: "pip install tox"
 # command to run tests
-script: tox -e $TOX_ENV
+script: tox -c tox.pip18.ini -e $TOX_ENV
 addons:
   postgresql: 9.3
 before_script:
